# viana-tech

./: Makefile  README.md  pyproject.toml
.github/workflow/: main.yml
app/templates/: index.html
