[project]
name = "VianaLabs"
version = "0.1.0"
description = "Official repository of Viana Labs, a web development agency based in Portugal, specializing in modern and responsive digital solutions."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Viana Labs", email = "contacto@vianalabs.pt" }
]
dependencies = [
    "flask",
]

[project.optional-dependencies]
test = [
    "flake8",
    "black",
    "isort",
    "pytest",
]

[tool.flake8]
exclude = [".venv", "build"]
max-line-length = 79

[tool.black]
line-length = 79
target-version = ["py38", "py310"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | _build
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
src_paths = ["app"]
multi_line_output = 3
line_length = 79
force_grid_wrap = 0
use_parentheses = true
include_trailing_comma = true
